fix: added to the media query for mobile and tablet devices to make the Counters text smaller and the Buttons icons smaller when viewed on those screens. Added a span and break between the Counters text and numbers that is only visible on mobile or tablet screens that forces the number below the text.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,6 +70,7 @@ p {
     font-weight: 500;
     font-size: 1em;
 }
+
 .row {
     margin: 0;
 }
@@ -320,4 +321,12 @@ body#lost {
    .card-row {
        padding: 0;
    }
+
+   #countersSection p {
+       font-size: 0.9em;
+    }
+
+    #buttonsSection i {
+        font-size: 1.2em;
+    }
 }
